# gemma_co-radiologist

./: .gitignore  NANOATHENS_TOOL_BUILDING_GUIDE.md  README.md  coradiology-agent-demo-sota.ipynb  pyproject.toml  requirements.txt  setup.py
RadiologyTools/: co_radiologist_tools.py  co_radiology_functions.py
app/: gemma_co_radiologist_app.py
nanoathens/: __init__.py  agent.py  context.py  core.py  engine.py  filler.py  inference.py  resolver.py  retriever.py  session.py
notebooks/: DDACoRadiologyAgent.ipynb  Gemma_Co_Radiologist_Kaggle.ipynb  MedicalToolCallBench.ipynb  cheXpertBenchV1.ipynb
notebooks/Experimental_DeepResearch_Agent/: GemmaDeepResearchAgent.ipynb  README.md
